Change GUI to statically linked FLTK, simple hello world example in main.cpp

--- a/buildroot-nx500.config
+++ b/buildroot-nx500.config
@@ -116,7 +116,7 @@ BR2_BZCAT="bzcat"
 BR2_XZCAT="xzcat"
 BR2_LZCAT="lzip -d -c"
 BR2_TAR_OPTIONS=""
-BR2_DEFCONFIG="/home/patxi/Proyectos/Patxi/NX500/nx500-buildroot/configs/raspberrypi2_defconfig"
+BR2_DEFCONFIG="/home/patxi/Proyectos/Patxi/NX500/NX500_intervalometer/buildroot/configs/qemu_arm_versatile_defconfig"
 BR2_DL_DIR="$(TOPDIR)/dl"
 BR2_HOST_DIR="$(BASE_DIR)/host"
 
@@ -177,8 +177,8 @@ BR2_TOOLCHAIN_BUILDROOT_LIBC="musl"
 #
 # Kernel Header Options
 #
-# BR2_KERNEL_HEADERS_3_2 is not set
-BR2_KERNEL_HEADERS_3_4=y
+BR2_KERNEL_HEADERS_3_2=y
+# BR2_KERNEL_HEADERS_3_4 is not set
 # BR2_KERNEL_HEADERS_3_10 is not set
 # BR2_KERNEL_HEADERS_3_12 is not set
 # BR2_KERNEL_HEADERS_4_1 is not set
@@ -188,7 +188,7 @@ BR2_KERNEL_HEADERS_3_4=y
 # BR2_KERNEL_HEADERS_4_11 is not set
 # BR2_KERNEL_HEADERS_4_12 is not set
 # BR2_KERNEL_HEADERS_VERSION is not set
-BR2_DEFAULT_KERNEL_HEADERS="3.4.113"
+BR2_DEFAULT_KERNEL_HEADERS="3.2.89"
 BR2_PACKAGE_LINUX_HEADERS=y
 BR2_PACKAGE_MUSL=y
 
@@ -196,9 +196,9 @@ BR2_PACKAGE_MUSL=y
 # Binutils Options
 #
 # BR2_BINUTILS_VERSION_2_27_X is not set
-BR2_BINUTILS_VERSION_2_28_X=y
-# BR2_BINUTILS_VERSION_2_29_X is not set
-BR2_BINUTILS_VERSION="2.28.1"
+# BR2_BINUTILS_VERSION_2_28_X is not set
+BR2_BINUTILS_VERSION_2_29_X=y
+BR2_BINUTILS_VERSION="2.29"
 BR2_BINUTILS_EXTRA_CONFIG_OPTIONS=""
 
 #
@@ -221,7 +221,15 @@ BR2_TOOLCHAIN_BUILDROOT_CXX=y
 #
 # Host GDB Options
 #
-# BR2_PACKAGE_HOST_GDB is not set
+BR2_PACKAGE_HOST_GDB=y
+# BR2_PACKAGE_HOST_GDB_TUI is not set
+# BR2_PACKAGE_HOST_GDB_PYTHON is not set
+# BR2_PACKAGE_HOST_GDB_SIM is not set
+# BR2_GDB_VERSION_7_10 is not set
+# BR2_GDB_VERSION_7_11 is not set
+# BR2_GDB_VERSION_7_12 is not set
+BR2_GDB_VERSION_8_0=y
+BR2_GDB_VERSION="8.0"
 
 #
 # Toolchain Generic Options
@@ -242,9 +250,7 @@ BR2_TARGET_LDFLAGS=""
 BR2_TOOLCHAIN_HEADERS_AT_LEAST_3_0=y
 BR2_TOOLCHAIN_HEADERS_AT_LEAST_3_1=y
 BR2_TOOLCHAIN_HEADERS_AT_LEAST_3_2=y
-BR2_TOOLCHAIN_HEADERS_AT_LEAST_3_3=y
-BR2_TOOLCHAIN_HEADERS_AT_LEAST_3_4=y
-BR2_TOOLCHAIN_HEADERS_AT_LEAST="3.4"
+BR2_TOOLCHAIN_HEADERS_AT_LEAST="3.2"
 BR2_TOOLCHAIN_GCC_AT_LEAST_4_3=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_4_4=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_4_5=y
@@ -299,7 +305,7 @@ BR2_SYSTEM_BIN_SH_BUSYBOX=y
 #
 # BR2_SYSTEM_BIN_SH_NONE is not set
 BR2_TARGET_GENERIC_GETTY=y
-BR2_TARGET_GENERIC_GETTY_PORT="console"
+BR2_TARGET_GENERIC_GETTY_PORT="ttyAMA0"
 BR2_TARGET_GENERIC_GETTY_BAUDRATE_KEEP=y
 # BR2_TARGET_GENERIC_GETTY_BAUDRATE_9600 is not set
 # BR2_TARGET_GENERIC_GETTY_BAUDRATE_19200 is not set
@@ -317,10 +323,9 @@ BR2_ENABLE_LOCALE_WHITELIST="C en_US"
 # BR2_TARGET_TZ_INFO is not set
 BR2_ROOTFS_USERS_TABLES=""
 BR2_ROOTFS_OVERLAY=""
-BR2_ROOTFS_POST_BUILD_SCRIPT="board/raspberrypi2/post-build.sh"
+BR2_ROOTFS_POST_BUILD_SCRIPT=""
 BR2_ROOTFS_POST_FAKEROOT_SCRIPT=""
-BR2_ROOTFS_POST_IMAGE_SCRIPT="board/raspberrypi2/post-image.sh"
-BR2_ROOTFS_POST_SCRIPT_ARGS=""
+BR2_ROOTFS_POST_IMAGE_SCRIPT=""
 
 #
 # Kernel
@@ -420,7 +425,7 @@ BR2_PACKAGE_MPLAYER_ARCH_SUPPORTS=y
 #
 # Compressors and decompressors
 #
-# BR2_PACKAGE_BZIP2 is not set
+BR2_PACKAGE_BZIP2=y
 # BR2_PACKAGE_LZ4 is not set
 # BR2_PACKAGE_LZIP is not set
 # BR2_PACKAGE_LZOP is not set
@@ -496,7 +501,7 @@ BR2_PACKAGE_OPROFILE_ARCH_SUPPORTS=y
 # rt-tests needs a uClibc or glibc toolchain w/ NPTL, headers >= 3.14, dynamic library
 #
 # BR2_PACKAGE_SPIDEV_TEST is not set
-BR2_PACKAGE_STRACE=y
+# BR2_PACKAGE_STRACE is not set
 # BR2_PACKAGE_STRESS is not set
 
 #
@@ -720,35 +725,35 @@ BR2_PACKAGE_XORG7=y
 # X11R7 Libraries
 #
 BR2_PACKAGE_LIBXCB=y
-# BR2_PACKAGE_XCB_UTIL is not set
-# BR2_PACKAGE_XCB_UTIL_CURSOR is not set
-# BR2_PACKAGE_XCB_UTIL_IMAGE is not set
-# BR2_PACKAGE_XCB_UTIL_KEYSYMS is not set
-# BR2_PACKAGE_XCB_UTIL_RENDERUTIL is not set
-# BR2_PACKAGE_XCB_UTIL_WM is not set
-# BR2_PACKAGE_XLIB_LIBFS is not set
+BR2_PACKAGE_XCB_UTIL=y
+BR2_PACKAGE_XCB_UTIL_CURSOR=y
+BR2_PACKAGE_XCB_UTIL_IMAGE=y
+BR2_PACKAGE_XCB_UTIL_KEYSYMS=y
+BR2_PACKAGE_XCB_UTIL_RENDERUTIL=y
+BR2_PACKAGE_XCB_UTIL_WM=y
+BR2_PACKAGE_XLIB_LIBFS=y
 BR2_PACKAGE_XLIB_LIBICE=y
 BR2_PACKAGE_XLIB_LIBSM=y
 BR2_PACKAGE_XLIB_LIBX11=y
 # BR2_PACKAGE_XLIB_LIBXSCRNSAVER is not set
 BR2_PACKAGE_XLIB_LIBXAU=y
-# BR2_PACKAGE_XLIB_LIBXAW is not set
-# BR2_PACKAGE_XLIB_LIBXCOMPOSITE is not set
-# BR2_PACKAGE_XLIB_LIBXCURSOR is not set
-# BR2_PACKAGE_XLIB_LIBXDAMAGE is not set
+BR2_PACKAGE_XLIB_LIBXAW=y
+BR2_PACKAGE_XLIB_LIBXCOMPOSITE=y
+BR2_PACKAGE_XLIB_LIBXCURSOR=y
+BR2_PACKAGE_XLIB_LIBXDAMAGE=y
 BR2_PACKAGE_XLIB_LIBXDMCP=y
 BR2_PACKAGE_XLIB_LIBXEXT=y
 BR2_PACKAGE_XLIB_LIBXFIXES=y
-# BR2_PACKAGE_XLIB_LIBXFONT is not set
-# BR2_PACKAGE_XLIB_LIBXFONT2 is not set
-# BR2_PACKAGE_XLIB_LIBXFT is not set
+BR2_PACKAGE_XLIB_LIBXFONT=y
+BR2_PACKAGE_XLIB_LIBXFONT2=y
+BR2_PACKAGE_XLIB_LIBXFT=y
 BR2_PACKAGE_XLIB_LIBXI=y
 BR2_PACKAGE_XLIB_LIBXINERAMA=y
-# BR2_PACKAGE_XLIB_LIBXMU is not set
-# BR2_PACKAGE_XLIB_LIBXPM is not set
-# BR2_PACKAGE_XLIB_LIBXRANDR is not set
-# BR2_PACKAGE_XLIB_LIBXRENDER is not set
-# BR2_PACKAGE_XLIB_LIBXRES is not set
+BR2_PACKAGE_XLIB_LIBXMU=y
+BR2_PACKAGE_XLIB_LIBXPM=y
+BR2_PACKAGE_XLIB_LIBXRANDR=y
+BR2_PACKAGE_XLIB_LIBXRENDER=y
+BR2_PACKAGE_XLIB_LIBXRES=y
 BR2_PACKAGE_XLIB_LIBXT=y
 BR2_PACKAGE_XLIB_LIBXTST=y
 # BR2_PACKAGE_XLIB_LIBXV is not set
@@ -756,7 +761,7 @@ BR2_PACKAGE_XLIB_LIBXTST=y
 # BR2_PACKAGE_XLIB_LIBXXF86DGA is not set
 # BR2_PACKAGE_XLIB_LIBXXF86VM is not set
 # BR2_PACKAGE_XLIB_LIBDMX is not set
-# BR2_PACKAGE_XLIB_LIBFONTENC is not set
+BR2_PACKAGE_XLIB_LIBFONTENC=y
 # BR2_PACKAGE_XLIB_LIBXKBFILE is not set
 # BR2_PACKAGE_XLIB_LIBXSHMFENCE is not set
 BR2_PACKAGE_XLIB_XTRANS=y
@@ -857,7 +862,7 @@ BR2_PACKAGE_XLIB_XTRANS=y
 # X11R7 Fonts
 #
 # BR2_PACKAGE_XFONT_FONT_UTIL is not set
-# BR2_PACKAGE_XFONT_ENCODINGS is not set
+BR2_PACKAGE_XFONT_ENCODINGS=y
 # BR2_PACKAGE_XFONT_FONT_ADOBE_100DPI is not set
 # BR2_PACKAGE_XFONT_FONT_ADOBE_75DPI is not set
 # BR2_PACKAGE_XFONT_FONT_ADOBE_UTOPIA_100DPI is not set
@@ -900,22 +905,22 @@ BR2_PACKAGE_XLIB_XTRANS=y
 BR2_PACKAGE_XCB_PROTO=y
 # BR2_PACKAGE_XPROTO_APPLEWMPROTO is not set
 # BR2_PACKAGE_XPROTO_BIGREQSPROTO is not set
-# BR2_PACKAGE_XPROTO_COMPOSITEPROTO is not set
-# BR2_PACKAGE_XPROTO_DAMAGEPROTO is not set
+BR2_PACKAGE_XPROTO_COMPOSITEPROTO=y
+BR2_PACKAGE_XPROTO_DAMAGEPROTO=y
 # BR2_PACKAGE_XPROTO_DMXPROTO is not set
 # BR2_PACKAGE_XPROTO_DRI2PROTO is not set
 # BR2_PACKAGE_XPROTO_DRI3PROTO is not set
 BR2_PACKAGE_XPROTO_FIXESPROTO=y
 # BR2_PACKAGE_XPROTO_FONTCACHEPROTO is not set
-# BR2_PACKAGE_XPROTO_FONTSPROTO is not set
+BR2_PACKAGE_XPROTO_FONTSPROTO=y
 # BR2_PACKAGE_XPROTO_GLPROTO is not set
 BR2_PACKAGE_XPROTO_INPUTPROTO=y
 BR2_PACKAGE_XPROTO_KBPROTO=y
 # BR2_PACKAGE_XPROTO_PRESENTPROTO is not set
-# BR2_PACKAGE_XPROTO_RANDRPROTO is not set
+BR2_PACKAGE_XPROTO_RANDRPROTO=y
 BR2_PACKAGE_XPROTO_RECORDPROTO=y
-# BR2_PACKAGE_XPROTO_RENDERPROTO is not set
-# BR2_PACKAGE_XPROTO_RESOURCEPROTO is not set
+BR2_PACKAGE_XPROTO_RENDERPROTO=y
+BR2_PACKAGE_XPROTO_RESOURCEPROTO=y
 # BR2_PACKAGE_XPROTO_SCRNSAVERPROTO is not set
 # BR2_PACKAGE_XPROTO_VIDEOPROTO is not set
 # BR2_PACKAGE_XPROTO_WINDOWSWMPROTO is not set
@@ -1044,7 +1049,10 @@ BR2_PACKAGE_XDOTOOL=y
 # dt-utils needs udev /dev management
 #
 # BR2_PACKAGE_DTV_SCAN_TABLES is not set
-# BR2_PACKAGE_DVB_APPS is not set
+
+#
+# dvb-apps utils needs a toolchain w/ threads, headers >= 3.3
+#
 # BR2_PACKAGE_DVBSNOOP is not set
 # BR2_PACKAGE_EDID_DECODE is not set
 # BR2_PACKAGE_EEPROG is not set
@@ -1364,9 +1372,8 @@ BR2_PACKAGE_LIBGPG_ERROR_SYSCFG="arm-unknown-linux-gnueabi"
 # BR2_PACKAGE_LIBUECC is not set
 # BR2_PACKAGE_MBEDTLS is not set
 # BR2_PACKAGE_NETTLE is not set
-BR2_PACKAGE_OPENSSL=y
-# BR2_PACKAGE_OPENSSL_BIN is not set
-# BR2_PACKAGE_OPENSSL_ENGINES is not set
+# BR2_PACKAGE_LIBRESSL is not set
+# BR2_PACKAGE_OPENSSL is not set
 # BR2_PACKAGE_RHASH is not set
 # BR2_PACKAGE_TINYDTLS is not set
 # BR2_PACKAGE_TROUSERS is not set
@@ -1419,8 +1426,8 @@ BR2_PACKAGE_MONGODB_ARCH_SUPPORTS=y
 # exiv2 needs a uClibc or glibc toolchain w/ C++, wchar, dynamic library, threads
 #
 BR2_PACKAGE_FLTK=y
-# BR2_PACKAGE_FONTCONFIG is not set
-# BR2_PACKAGE_FREETYPE is not set
+BR2_PACKAGE_FONTCONFIG=y
+BR2_PACKAGE_FREETYPE=y
 # BR2_PACKAGE_GD is not set
 # BR2_PACKAGE_GDK_PIXBUF is not set
 # BR2_PACKAGE_GIBLIB is not set
@@ -1464,7 +1471,7 @@ BR2_PACKAGE_PROVIDES_JPEG="jpeg-turbo"
 #
 # libepoxy needs an OpenGL and/or OpenGL EGL backend
 #
-# BR2_PACKAGE_LIBEXIF is not set
+BR2_PACKAGE_LIBEXIF=y
 # BR2_PACKAGE_LIBFM is not set
 # BR2_PACKAGE_LIBFM_EXTRA is not set
 
@@ -1616,7 +1623,7 @@ BR2_PACKAGE_LIBXKBCOMMON=y
 #
 # BR2_PACKAGE_BENEJSON is not set
 # BR2_PACKAGE_CJSON is not set
-# BR2_PACKAGE_EXPAT is not set
+BR2_PACKAGE_EXPAT=y
 # BR2_PACKAGE_EZXML is not set
 # BR2_PACKAGE_JANSSON is not set
 # BR2_PACKAGE_JSMN is not set
@@ -1831,23 +1838,25 @@ BR2_PACKAGE_BOOST_LAYOUT_SYSTEM=y
 # BR2_PACKAGE_BOOST_LAYOUT_VERSIONED is not set
 BR2_PACKAGE_BOOST_LAYOUT="system"
 # BR2_PACKAGE_BOOST_ATOMIC is not set
-# BR2_PACKAGE_BOOST_CHRONO is not set
-# BR2_PACKAGE_BOOST_CONTAINER is not set
-# BR2_PACKAGE_BOOST_CONTEXT is not set
-# BR2_PACKAGE_BOOST_DATE_TIME is not set
+BR2_PACKAGE_BOOST_CHRONO=y
+BR2_PACKAGE_BOOST_CONTAINER=y
+BR2_PACKAGE_BOOST_CONTEXT=y
+# BR2_PACKAGE_BOOST_COROUTINE is not set
+BR2_PACKAGE_BOOST_COROUTINE2=y
+BR2_PACKAGE_BOOST_DATE_TIME=y
 # BR2_PACKAGE_BOOST_EXCEPTION is not set
-# BR2_PACKAGE_BOOST_FILESYSTEM is not set
+BR2_PACKAGE_BOOST_FILESYSTEM=y
 # BR2_PACKAGE_BOOST_GRAPH is not set
 # BR2_PACKAGE_BOOST_GRAPH_PARALLEL is not set
-# BR2_PACKAGE_BOOST_IOSTREAMS is not set
+BR2_PACKAGE_BOOST_IOSTREAMS=y
 # BR2_PACKAGE_BOOST_LOCALE is not set
 # BR2_PACKAGE_BOOST_LOG is not set
 # BR2_PACKAGE_BOOST_MATH is not set
 # BR2_PACKAGE_BOOST_METAPARSE is not set
 # BR2_PACKAGE_BOOST_MPI is not set
-# BR2_PACKAGE_BOOST_PROGRAM_OPTIONS is not set
+BR2_PACKAGE_BOOST_PROGRAM_OPTIONS=y
 # BR2_PACKAGE_BOOST_RANDOM is not set
-# BR2_PACKAGE_BOOST_REGEX is not set
+BR2_PACKAGE_BOOST_REGEX=y
 # BR2_PACKAGE_BOOST_SERIALIZATION is not set
 # BR2_PACKAGE_BOOST_SIGNALS is not set
 BR2_PACKAGE_BOOST_SYSTEM=y
@@ -1998,11 +2007,7 @@ BR2_PACKAGE_PROTOBUF_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LINENOISE is not set
 # BR2_PACKAGE_NCURSES is not set
 # BR2_PACKAGE_NEWT is not set
-BR2_PACKAGE_PCRE=y
-# BR2_PACKAGE_PCRE_16 is not set
-# BR2_PACKAGE_PCRE_32 is not set
-# BR2_PACKAGE_PCRE_UTF is not set
-# BR2_PACKAGE_PCRE_UCP is not set
+# BR2_PACKAGE_PCRE is not set
 # BR2_PACKAGE_PCRE2 is not set
 # BR2_PACKAGE_POPT is not set
 # BR2_PACKAGE_READLINE is not set
@@ -2068,7 +2073,10 @@ BR2_PACKAGE_XUTIL_UTIL_MACROS=y
 # BR2_PACKAGE_BCUSDK is not set
 # BR2_PACKAGE_BIND is not set
 # BR2_PACKAGE_BLUEZ_UTILS is not set
-# BR2_PACKAGE_BLUEZ5_UTILS is not set
+
+#
+# bluez5-utils needs a toolchain w/ wchar, threads, headers >= 3.4, dynamic library
+#
 # BR2_PACKAGE_BMON is not set
 # BR2_PACKAGE_BOA is not set
 # BR2_PACKAGE_BRIDGE_UTILS is not set
@@ -2125,7 +2133,7 @@ BR2_PACKAGE_XUTIL_UTIL_MACROS=y
 # BR2_PACKAGE_IBRDTN_TOOLS is not set
 # BR2_PACKAGE_IBRDTND is not set
 # BR2_PACKAGE_IFTOP is not set
-# BR2_PACKAGE_IFUPDOWN_SCRIPTS is not set
+BR2_PACKAGE_IFUPDOWN_SCRIPTS=y
 # BR2_PACKAGE_IGD2_FOR_LINUX is not set
 
 #
@@ -2136,7 +2144,10 @@ BR2_PACKAGE_XUTIL_UTIL_MACROS=y
 # BR2_PACKAGE_IODINE is not set
 # BR2_PACKAGE_IPERF is not set
 # BR2_PACKAGE_IPERF3 is not set
-# BR2_PACKAGE_IPROUTE2 is not set
+
+#
+# iproute2 needs a toolchain w/ headers >= 3.4
+#
 # BR2_PACKAGE_IPSET is not set
 # BR2_PACKAGE_IPTABLES is not set
 # BR2_PACKAGE_IPTRAF_NG is not set
@@ -2144,7 +2155,10 @@ BR2_PACKAGE_XUTIL_UTIL_MACROS=y
 # BR2_PACKAGE_IRSSI is not set
 # BR2_PACKAGE_IW is not set
 # BR2_PACKAGE_JANUS_GATEWAY is not set
-# BR2_PACKAGE_KEEPALIVED is not set
+
+#
+# keepalived needs a toolchain w/ dynamic library, headers >= 3.4
+#
 # BR2_PACKAGE_KISMET is not set
 # BR2_PACKAGE_KNOCK is not set
 # BR2_PACKAGE_LEAFNODE2 is not set
@@ -2529,7 +2543,25 @@ BR2_PACKAGE_XVISOR_ARCH_SUPPORTS=y
 # BR2_TARGET_ROOTFS_CLOOP is not set
 # BR2_TARGET_ROOTFS_CPIO is not set
 # BR2_TARGET_ROOTFS_CRAMFS is not set
-# BR2_TARGET_ROOTFS_EXT2 is not set
+BR2_TARGET_ROOTFS_EXT2=y
+BR2_TARGET_ROOTFS_EXT2_2=y
+# BR2_TARGET_ROOTFS_EXT2_2r0 is not set
+BR2_TARGET_ROOTFS_EXT2_2r1=y
+# BR2_TARGET_ROOTFS_EXT2_3 is not set
+# BR2_TARGET_ROOTFS_EXT2_4 is not set
+BR2_TARGET_ROOTFS_EXT2_GEN=2
+BR2_TARGET_ROOTFS_EXT2_REV=1
+BR2_TARGET_ROOTFS_EXT2_LABEL=""
+BR2_TARGET_ROOTFS_EXT2_SIZE="60M"
+BR2_TARGET_ROOTFS_EXT2_INODES=0
+BR2_TARGET_ROOTFS_EXT2_RESBLKS=5
+BR2_TARGET_ROOTFS_EXT2_MKFS_OPTIONS="-O ^64bit"
+BR2_TARGET_ROOTFS_EXT2_NONE=y
+# BR2_TARGET_ROOTFS_EXT2_GZIP is not set
+# BR2_TARGET_ROOTFS_EXT2_BZIP2 is not set
+# BR2_TARGET_ROOTFS_EXT2_LZMA is not set
+# BR2_TARGET_ROOTFS_EXT2_LZO is not set
+# BR2_TARGET_ROOTFS_EXT2_XZ is not set
 
 #
 # initramfs needs a Linux kernel to be built
@@ -2537,14 +2569,7 @@ BR2_PACKAGE_XVISOR_ARCH_SUPPORTS=y
 # BR2_TARGET_ROOTFS_JFFS2 is not set
 # BR2_TARGET_ROOTFS_ROMFS is not set
 # BR2_TARGET_ROOTFS_SQUASHFS is not set
-BR2_TARGET_ROOTFS_TAR=y
-BR2_TARGET_ROOTFS_TAR_NONE=y
-# BR2_TARGET_ROOTFS_TAR_GZIP is not set
-# BR2_TARGET_ROOTFS_TAR_BZIP2 is not set
-# BR2_TARGET_ROOTFS_TAR_LZMA is not set
-# BR2_TARGET_ROOTFS_TAR_LZO is not set
-# BR2_TARGET_ROOTFS_TAR_XZ is not set
-BR2_TARGET_ROOTFS_TAR_OPTIONS=""
+# BR2_TARGET_ROOTFS_TAR is not set
 # BR2_TARGET_ROOTFS_UBIFS is not set
 # BR2_TARGET_ROOTFS_YAFFS2 is not set
 
@@ -2569,14 +2594,14 @@ BR2_TARGET_ROOTFS_TAR_OPTIONS=""
 # BR2_PACKAGE_HOST_CRAMFS is not set
 # BR2_PACKAGE_HOST_DFU_UTIL is not set
 # BR2_PACKAGE_HOST_DOS2UNIX is not set
-BR2_PACKAGE_HOST_DOSFSTOOLS=y
+# BR2_PACKAGE_HOST_DOSFSTOOLS is not set
 # BR2_PACKAGE_HOST_DTC is not set
 BR2_PACKAGE_HOST_E2FSPROGS=y
 # BR2_PACKAGE_HOST_E2TOOLS is not set
 # BR2_PACKAGE_HOST_FAKETIME is not set
 # BR2_PACKAGE_HOST_FWUP is not set
 # BR2_PACKAGE_HOST_GENEXT2FS is not set
-BR2_PACKAGE_HOST_GENIMAGE=y
+# BR2_PACKAGE_HOST_GENIMAGE is not set
 # BR2_PACKAGE_HOST_GENPART is not set
 BR2_PACKAGE_HOST_GO_ARCH_SUPPORTS=y
 BR2_PACKAGE_HOST_GO_CGO_LINKING_SUPPORTS=y
@@ -2589,7 +2614,7 @@ BR2_PACKAGE_HOST_GO_CGO_LINKING_SUPPORTS=y
 # BR2_PACKAGE_HOST_MFGTOOLS is not set
 # BR2_PACKAGE_HOST_MKPASSWD is not set
 # BR2_PACKAGE_HOST_MTD is not set
-BR2_PACKAGE_HOST_MTOOLS=y
+# BR2_PACKAGE_HOST_MTOOLS is not set
 # BR2_PACKAGE_HOST_MXSLDR is not set
 # BR2_PACKAGE_HOST_OMAP_U_BOOT_UTILS is not set
 # BR2_PACKAGE_HOST_OPENOCD is not set
