Updated buildroot to 2017.11 branch. Updated README.md

--- a/buildroot-nx500.config
+++ b/buildroot-nx500.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2017.08-rc1-00036-g79bab1f Configuration
+# Buildroot 2017.11 Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_5=y
@@ -41,6 +41,7 @@ BR2_arm=y
 # BR2_sparc64 is not set
 # BR2_x86_64 is not set
 # BR2_xtensa is not set
+BR2_ARCH_HAS_TOOLCHAIN_BUILDROOT=y
 BR2_ARCH="arm"
 BR2_ENDIAN="LITTLE"
 BR2_GCC_TARGET_ABI="aapcs-linux"
@@ -187,8 +188,9 @@ BR2_KERNEL_HEADERS_3_2=y
 # BR2_KERNEL_HEADERS_4_10 is not set
 # BR2_KERNEL_HEADERS_4_11 is not set
 # BR2_KERNEL_HEADERS_4_12 is not set
+# BR2_KERNEL_HEADERS_4_13 is not set
 # BR2_KERNEL_HEADERS_VERSION is not set
-BR2_DEFAULT_KERNEL_HEADERS="3.2.89"
+BR2_DEFAULT_KERNEL_HEADERS="3.2.96"
 BR2_PACKAGE_LINUX_HEADERS=y
 BR2_PACKAGE_MUSL=y
 
@@ -198,7 +200,7 @@ BR2_PACKAGE_MUSL=y
 # BR2_BINUTILS_VERSION_2_27_X is not set
 # BR2_BINUTILS_VERSION_2_28_X is not set
 BR2_BINUTILS_VERSION_2_29_X=y
-BR2_BINUTILS_VERSION="2.29"
+BR2_BINUTILS_VERSION="2.29.1"
 BR2_BINUTILS_EXTRA_CONFIG_OPTIONS=""
 
 #
@@ -217,6 +219,7 @@ BR2_TOOLCHAIN_BUILDROOT_CXX=y
 # BR2_GCC_ENABLE_LTO is not set
 # BR2_GCC_ENABLE_OPENMP is not set
 # BR2_GCC_ENABLE_GRAPHITE is not set
+BR2_PACKAGE_HOST_GDB_ARCH_SUPPORTS=y
 
 #
 # Host GDB Options
@@ -229,7 +232,7 @@ BR2_PACKAGE_HOST_GDB=y
 # BR2_GDB_VERSION_7_11 is not set
 # BR2_GDB_VERSION_7_12 is not set
 BR2_GDB_VERSION_8_0=y
-BR2_GDB_VERSION="8.0"
+BR2_GDB_VERSION="8.0.1"
 
 #
 # Toolchain Generic Options
@@ -343,9 +346,9 @@ BR2_PACKAGE_BUSYBOX_CONFIG_FRAGMENT_FILES=""
 # BR2_PACKAGE_BUSYBOX_WATCHDOG is not set
 BR2_PACKAGE_SKELETON=y
 BR2_PACKAGE_HAS_SKELETON=y
-BR2_PACKAGE_PROVIDES_SKELETON="skeleton-sysv"
-BR2_PACKAGE_SKELETON_COMMON=y
-BR2_PACKAGE_SKELETON_SYSV=y
+BR2_PACKAGE_PROVIDES_SKELETON="skeleton-init-sysv"
+BR2_PACKAGE_SKELETON_INIT_COMMON=y
+BR2_PACKAGE_SKELETON_INIT_SYSV=y
 
 #
 # Audio and video applications
@@ -396,6 +399,7 @@ BR2_PACKAGE_MPLAYER_ARCH_SUPPORTS=y
 # BR2_PACKAGE_MUSEPACK is not set
 # BR2_PACKAGE_NCMPC is not set
 # BR2_PACKAGE_OPUS_TOOLS is not set
+BR2_PACKAGE_PULSEAUDIO_HAS_ATOMIC=y
 # BR2_PACKAGE_PULSEAUDIO is not set
 # BR2_PACKAGE_SOX is not set
 # BR2_PACKAGE_SQUEEZELITE is not set
@@ -509,7 +513,7 @@ BR2_PACKAGE_OPROFILE_ARCH_SUPPORTS=y
 #
 
 #
-# sysdig needs a toolchain w/ C++, gcc >= 4.7, dynamic library and a Linux kernel to be built
+# sysdig needs a toolchain w/ C++, gcc >= 4.8, dynamic library and a Linux kernel to be built
 #
 # BR2_PACKAGE_TINYMEMBENCH is not set
 # BR2_PACKAGE_TRACE_CMD is not set
@@ -519,6 +523,7 @@ BR2_PACKAGE_TRINITY_ARCH_SUPPORTS=y
 # trinity needs a uClibc or glibc toolchain w/ headers >= 3.4
 #
 # BR2_PACKAGE_UCLIBC_NG_TEST is not set
+BR2_PACKAGE_VALGRIND_ARCH_SUPPORTS=y
 # BR2_PACKAGE_VALGRIND is not set
 # BR2_PACKAGE_WHETSTONE is not set
 
@@ -570,6 +575,7 @@ BR2_PACKAGE_CMAKE_ARCH_SUPPORTS=y
 # BR2_PACKAGE_EXFAT_UTILS is not set
 # BR2_PACKAGE_F2FS_TOOLS is not set
 # BR2_PACKAGE_FLASHBENCH is not set
+# BR2_PACKAGE_FSCRYPTCTL is not set
 # BR2_PACKAGE_FWUP is not set
 # BR2_PACKAGE_GENEXT2FS is not set
 # BR2_PACKAGE_GENPART is not set
@@ -579,10 +585,6 @@ BR2_PACKAGE_CMAKE_ARCH_SUPPORTS=y
 # BR2_PACKAGE_MTOOLS is not set
 # BR2_PACKAGE_NFS_UTILS is not set
 # BR2_PACKAGE_NTFS_3G is not set
-
-#
-# simicsfs needs a Linux kernel to be built
-#
 # BR2_PACKAGE_SP_OOPS_EXTRACT is not set
 # BR2_PACKAGE_SQUASHFS is not set
 # BR2_PACKAGE_SSHFS is not set
@@ -640,6 +642,10 @@ BR2_PACKAGE_CMAKE_ARCH_SUPPORTS=y
 
 #
 # lugaru needs X11 and a toolchain w/ C++, OpenGL backend, gcc >= 4.7, NPTL, dynamic library
+#
+
+#
+# minetest needs X11 and an OpenGL provider
 #
 # BR2_PACKAGE_OPENTYRIAN is not set
 # BR2_PACKAGE_PRBOOM is not set
@@ -960,7 +966,7 @@ BR2_PACKAGE_XPROTO_XPROTO=y
 # BR2_PACKAGE_FEH is not set
 
 #
-# midori needs libgtk3 and a glibc toolchain w/ C++, gcc >= 4.9, host gcc >= 4.8
+# midori needs libgtk3 and a glibc toolchain w/ C++, gcc >= 5, host gcc >= 4.8
 #
 
 #
@@ -1034,21 +1040,29 @@ BR2_PACKAGE_XDOTOOL=y
 #
 # BR2_PACKAGE_CC_TOOL is not set
 # BR2_PACKAGE_CDRKIT is not set
-
-#
-# cryptsetup needs a glibc or uClibc toolchain w/ threads, dynamic library
-#
+# BR2_PACKAGE_CRYPTSETUP is not set
 # BR2_PACKAGE_CWIID is not set
-# BR2_PACKAGE_DBUS is not set
 
 #
-# dmraid needs a glibc or uClibc toolchain w/ threads, dynamic library
+# dahdi-linux needs a Linux kernel to be built
 #
+
+#
+# dahdi-tools needs a toolchain w/ threads
+#
+
+#
+# dahdi-tools needs a Linux kernel to be built
+#
+# BR2_PACKAGE_DBUS is not set
+# BR2_PACKAGE_DFU_UTIL is not set
+# BR2_PACKAGE_DMRAID is not set
 
 #
 # dt-utils needs udev /dev management
 #
 # BR2_PACKAGE_DTV_SCAN_TABLES is not set
+# BR2_PACKAGE_DUMP1090 is not set
 
 #
 # dvb-apps utils needs a toolchain w/ threads, headers >= 3.3
@@ -1102,8 +1116,9 @@ BR2_PACKAGE_XDOTOOL=y
 # BR2_PACKAGE_LSUIO is not set
 
 #
-# lvm2 needs a glibc or uClibc toolchain w/ threads, dynamic library
+# luksmeta needs a glibc or uClibc toolchain w/ threads, dynamic library
 #
+# BR2_PACKAGE_LVM2 is not set
 
 #
 # mali-t76x needs a glibc toolchain with armhf enabled
@@ -1137,7 +1152,6 @@ BR2_PACKAGE_XDOTOOL=y
 # BR2_PACKAGE_PPS_TOOLS is not set
 # BR2_PACKAGE_PRU_SOFTWARE_SUPPORT is not set
 # BR2_PACKAGE_READ_EDID is not set
-# BR2_PACKAGE_RFKILL is not set
 # BR2_PACKAGE_RNG_TOOLS is not set
 # BR2_PACKAGE_RPI_USERLAND is not set
 # BR2_PACKAGE_RS485CONF is not set
@@ -1211,6 +1225,7 @@ BR2_PACKAGE_XDOTOOL=y
 #
 # udisks needs a glibc or uClibc toolchain w/ wchar, threads, dynamic library
 #
+# BR2_PACKAGE_UHUBCTL is not set
 
 #
 # upower needs udev /dev management
@@ -1280,6 +1295,7 @@ BR2_PACKAGE_NODEJS_ARCH_SUPPORTS=y
 # BR2_PACKAGE_ALSA_LIB is not set
 # BR2_PACKAGE_AUBIO is not set
 # BR2_PACKAGE_AUDIOFILE is not set
+# BR2_PACKAGE_BCG729 is not set
 # BR2_PACKAGE_CELT051 is not set
 BR2_PACKAGE_FDK_AAC_ARCH_SUPPORTS=y
 # BR2_PACKAGE_FDK_AAC is not set
@@ -1372,8 +1388,8 @@ BR2_PACKAGE_LIBGPG_ERROR_SYSCFG="arm-unknown-linux-gnueabi"
 # BR2_PACKAGE_LIBUECC is not set
 # BR2_PACKAGE_MBEDTLS is not set
 # BR2_PACKAGE_NETTLE is not set
-# BR2_PACKAGE_LIBRESSL is not set
 # BR2_PACKAGE_OPENSSL is not set
+BR2_PACKAGE_PROVIDES_HOST_OPENSSL="host-libopenssl"
 # BR2_PACKAGE_RHASH is not set
 # BR2_PACKAGE_TINYDTLS is not set
 # BR2_PACKAGE_TROUSERS is not set
@@ -1439,15 +1455,15 @@ BR2_PACKAGE_FREETYPE=y
 # BR2_PACKAGE_GRAPHITE2 is not set
 
 #
-# gtkmm3 needs libgtk3 and a toolchain w/ C++, wchar, threads, gcc >= 4.8
+# gtkmm3 needs libgtk3 and a toolchain w/ C++, wchar, threads, gcc >= 4.9
 #
 # BR2_PACKAGE_HARFBUZZ is not set
 # BR2_PACKAGE_IJS is not set
+# BR2_PACKAGE_IMLIB2 is not set
 
 #
 # irrlicht needs X11 and an OpenGL provider
 #
-# BR2_PACKAGE_IMLIB2 is not set
 # BR2_PACKAGE_JASPER is not set
 BR2_PACKAGE_JPEG=y
 BR2_PACKAGE_JPEG_SIMD_SUPPORT=y
@@ -1527,7 +1543,7 @@ BR2_PACKAGE_LIBPNG=y
 BR2_PACKAGE_WEBKITGTK_ARCH_SUPPORTS=y
 
 #
-# webkitgtk needs libgtk3 and a glibc toolchain w/ C++, gcc >= 4.9, host gcc >= 4.8
+# webkitgtk needs libgtk3 and a glibc toolchain w/ C++, gcc >= 5, host gcc >= 4.8
 #
 # BR2_PACKAGE_WEBP is not set
 # BR2_PACKAGE_ZBAR is not set
@@ -1575,13 +1591,14 @@ BR2_PACKAGE_LIBAIO_ARCH_SUPPORTS=y
 #
 # BR2_PACKAGE_LIBIQRF is not set
 # BR2_PACKAGE_LIBLLCP is not set
-
-#
-# libmbim needs udev /dev management and a toolchain w/ wchar, threads
-#
+# BR2_PACKAGE_LIBMBIM is not set
 # BR2_PACKAGE_LIBNFC is not set
 # BR2_PACKAGE_LIBPCIACCESS is not set
 # BR2_PACKAGE_LIBPHIDGET is not set
+
+#
+# libpri needs a kernel to be built
+#
 # BR2_PACKAGE_LIBQMI is not set
 # BR2_PACKAGE_LIBRAW1394 is not set
 # BR2_PACKAGE_LIBRTLSDR is not set
@@ -1590,6 +1607,10 @@ BR2_PACKAGE_LIBAIO_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBSIGROK is not set
 # BR2_PACKAGE_LIBSIGROKDECODE is not set
 # BR2_PACKAGE_LIBSOC is not set
+
+#
+# libss7 needs a kernel to be built
+#
 # BR2_PACKAGE_LIBUSB is not set
 # BR2_PACKAGE_LIBUSBGX is not set
 # BR2_PACKAGE_LIBV4L is not set
@@ -1626,6 +1647,7 @@ BR2_PACKAGE_LIBXKBCOMMON=y
 BR2_PACKAGE_EXPAT=y
 # BR2_PACKAGE_EZXML is not set
 # BR2_PACKAGE_JANSSON is not set
+# BR2_PACKAGE_JOSE is not set
 # BR2_PACKAGE_JSMN is not set
 # BR2_PACKAGE_JSON_C is not set
 # BR2_PACKAGE_JSON_GLIB is not set
@@ -1710,6 +1732,7 @@ BR2_PACKAGE_LIBOPENH264_ARCH_SUPPORTS=y
 # BR2_PACKAGE_ALLJOYN_BASE is not set
 # BR2_PACKAGE_ALLJOYN_TCL is not set
 # BR2_PACKAGE_ALLJOYN_TCL_BASE is not set
+# BR2_PACKAGE_AZMQ is not set
 # BR2_PACKAGE_AZURE_IOT_SDK_C is not set
 
 #
@@ -1842,9 +1865,9 @@ BR2_PACKAGE_BOOST_CHRONO=y
 BR2_PACKAGE_BOOST_CONTAINER=y
 BR2_PACKAGE_BOOST_CONTEXT=y
 # BR2_PACKAGE_BOOST_COROUTINE is not set
-BR2_PACKAGE_BOOST_COROUTINE2=y
 BR2_PACKAGE_BOOST_DATE_TIME=y
 # BR2_PACKAGE_BOOST_EXCEPTION is not set
+# BR2_PACKAGE_BOOST_FIBER is not set
 BR2_PACKAGE_BOOST_FILESYSTEM=y
 # BR2_PACKAGE_BOOST_GRAPH is not set
 # BR2_PACKAGE_BOOST_GRAPH_PARALLEL is not set
@@ -1859,6 +1882,7 @@ BR2_PACKAGE_BOOST_PROGRAM_OPTIONS=y
 BR2_PACKAGE_BOOST_REGEX=y
 # BR2_PACKAGE_BOOST_SERIALIZATION is not set
 # BR2_PACKAGE_BOOST_SIGNALS is not set
+# BR2_PACKAGE_BOOST_STACKTRACE is not set
 BR2_PACKAGE_BOOST_SYSTEM=y
 # BR2_PACKAGE_BOOST_TEST is not set
 BR2_PACKAGE_BOOST_THREAD=y
@@ -1894,6 +1918,7 @@ BR2_PACKAGE_JEMALLOC_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBARGTABLE2 is not set
 BR2_PACKAGE_LIBATOMIC_OPS_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBATOMIC_OPS is not set
+# BR2_PACKAGE_LIBB64 is not set
 BR2_PACKAGE_LIBBSD_ARCH_SUPPORTS=y
 
 #
@@ -2058,12 +2083,15 @@ BR2_PACKAGE_XUTIL_UTIL_MACROS=y
 #
 # Networking applications
 #
-# BR2_PACKAGE_AICCU is not set
 # BR2_PACKAGE_AIRCRACK_NG is not set
 # BR2_PACKAGE_APACHE is not set
 # BR2_PACKAGE_ARGUS is not set
 # BR2_PACKAGE_ARP_SCAN is not set
 # BR2_PACKAGE_ARPTABLES is not set
+
+#
+# asterisk needs a glibc toolchain w/ C++
+#
 # BR2_PACKAGE_ATFTP is not set
 # BR2_PACKAGE_AVAHI is not set
 # BR2_PACKAGE_AXEL is not set
@@ -2079,6 +2107,7 @@ BR2_PACKAGE_XUTIL_UTIL_MACROS=y
 #
 # BR2_PACKAGE_BMON is not set
 # BR2_PACKAGE_BOA is not set
+# BR2_PACKAGE_BOINC is not set
 # BR2_PACKAGE_BRIDGE_UTILS is not set
 # BR2_PACKAGE_BWM_NG is not set
 # BR2_PACKAGE_C_ICAP is not set
@@ -2244,6 +2273,10 @@ BR2_PACKAGE_IFUPDOWN_SCRIPTS=y
 # BR2_PACKAGE_PPTP_LINUX is not set
 # BR2_PACKAGE_PRIVOXY is not set
 # BR2_PACKAGE_PROFTPD is not set
+
+#
+# prosody needs the lua interpreter
+#
 # BR2_PACKAGE_PROXYCHAINS_NG is not set
 # BR2_PACKAGE_PTPD is not set
 # BR2_PACKAGE_PTPD2 is not set
@@ -2312,6 +2345,10 @@ BR2_PACKAGE_IFUPDOWN_SCRIPTS=y
 # BR2_PACKAGE_VSFTPD is not set
 # BR2_PACKAGE_VTUN is not set
 # BR2_PACKAGE_WAVEMON is not set
+
+#
+# wireguard needs a toolchain w/ headers >= 3.10
+#
 # BR2_PACKAGE_WIRELESS_REGDB is not set
 # BR2_PACKAGE_WIRELESS_TOOLS is not set
 # BR2_PACKAGE_WIRESHARK is not set
@@ -2402,7 +2439,12 @@ BR2_PACKAGE_XENOMAI_ARCH_SUPPORTS=y
 #
 # refpolicy needs a glibc toolchain w/ threads, dynamic library
 #
-# BR2_PACKAGE_SEPOLGEN is not set
+
+#
+# restorecond needs a toolchain w/ wchar, threads, dynamic library
+#
+# BR2_PACKAGE_SELINUX_PYTHON is not set
+# BR2_PACKAGE_SEMODULE_UTILS is not set
 
 #
 # setools needs a glibc toolchain w/ threads, C++, wchar, dynamic library
@@ -2424,14 +2466,15 @@ BR2_PACKAGE_XENOMAI_ARCH_SUPPORTS=y
 # BR2_PACKAGE_CCRYPT is not set
 # BR2_PACKAGE_DIALOG is not set
 # BR2_PACKAGE_DTACH is not set
-# BR2_PACKAGE_FILE is not set
 # BR2_PACKAGE_EASY_RSA is not set
+# BR2_PACKAGE_FILE is not set
 # BR2_PACKAGE_GNUPG is not set
 # BR2_PACKAGE_GNUPG2 is not set
 # BR2_PACKAGE_INOTIFY_TOOLS is not set
 # BR2_PACKAGE_LOCKFILE_PROGS is not set
 # BR2_PACKAGE_LOGROTATE is not set
 # BR2_PACKAGE_LOGSURFER is not set
+# BR2_PACKAGE_PDMENU is not set
 # BR2_PACKAGE_PINENTRY is not set
 # BR2_PACKAGE_RANGER is not set
 # BR2_PACKAGE_SCREEN is not set
@@ -2591,7 +2634,9 @@ BR2_TARGET_ROOTFS_EXT2_NONE=y
 # BR2_PACKAGE_HOST_ANDROID_TOOLS is not set
 # BR2_PACKAGE_HOST_CBOOTIMAGE is not set
 # BR2_PACKAGE_HOST_CHECKPOLICY is not set
+# BR2_PACKAGE_HOST_CMAKE is not set
 # BR2_PACKAGE_HOST_CRAMFS is not set
+# BR2_PACKAGE_HOST_CRYPTSETUP is not set
 # BR2_PACKAGE_HOST_DFU_UTIL is not set
 # BR2_PACKAGE_HOST_DOS2UNIX is not set
 # BR2_PACKAGE_HOST_DOSFSTOOLS is not set
@@ -2605,6 +2650,8 @@ BR2_PACKAGE_HOST_E2FSPROGS=y
 # BR2_PACKAGE_HOST_GENPART is not set
 BR2_PACKAGE_HOST_GO_ARCH_SUPPORTS=y
 BR2_PACKAGE_HOST_GO_CGO_LINKING_SUPPORTS=y
+BR2_PACKAGE_HOST_GO_BOOTSTRAP_ARCH_SUPPORTS=y
+BR2_PACKAGE_HOST_GOOGLE_BREAKPAD_ARCH_SUPPORTS=y
 # BR2_PACKAGE_HOST_GPTFDISK is not set
 # BR2_PACKAGE_HOST_IMX_USB_LOADER is not set
 # BR2_PACKAGE_HOST_JQ is not set
@@ -2621,9 +2668,11 @@ BR2_PACKAGE_HOST_GO_CGO_LINKING_SUPPORTS=y
 # BR2_PACKAGE_HOST_OPKG_UTILS is not set
 # BR2_PACKAGE_HOST_PARTED is not set
 BR2_PACKAGE_HOST_PATCHELF=y
+# BR2_PACKAGE_HOST_PKGCONF is not set
 # BR2_PACKAGE_HOST_PRU_SOFTWARE_SUPPORT is not set
 # BR2_PACKAGE_HOST_PWGEN is not set
 # BR2_PACKAGE_HOST_PYTHON_LXML is not set
+# BR2_PACKAGE_HOST_PYTHON_SIX is not set
 # BR2_PACKAGE_HOST_QEMU is not set
 # BR2_PACKAGE_HOST_RASPBERRYPI_USBBOOT is not set
 # BR2_PACKAGE_HOST_RAUC is not set
@@ -2644,8 +2693,26 @@ BR2_PACKAGE_HOST_UTIL_LINUX=y
 #
 
 #
+# Legacy options removed in 2017.11
+#
+# BR2_PACKAGE_RFKILL is not set
+# BR2_PACKAGE_UTIL_LINUX_RESET is not set
+# BR2_PACKAGE_POLICYCOREUTILS_AUDIT2ALLOW is not set
+# BR2_PACKAGE_POLICYCOREUTILS_RESTORECOND is not set
+# BR2_PACKAGE_SEPOLGEN is not set
+# BR2_PACKAGE_OPENOBEX_BLUEZ is not set
+# BR2_PACKAGE_OPENOBEX_LIBUSB is not set
+# BR2_PACKAGE_OPENOBEX_APPS is not set
+# BR2_PACKAGE_OPENOBEX_SYSLOG is not set
+# BR2_PACKAGE_OPENOBEX_DUMP is not set
+# BR2_PACKAGE_AICCU is not set
+# BR2_PACKAGE_UTIL_LINUX_LOGIN_UTILS is not set
+
+#
 # Legacy options removed in 2017.08
 #
+# BR2_TARGET_GRUB is not set
+# BR2_PACKAGE_SIMICSFS is not set
 # BR2_BINUTILS_VERSION_2_26_X is not set
 BR2_XTENSA_OVERLAY_DIR=""
 BR2_XTENSA_CUSTOM_NAME=""
