--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "xdotool"]
 	path = xdotool
 	url = https://github.com/jordansissel/xdotool.git
+[submodule "beast"]
+	path = beast
+	url = https://github.com/boostorg/beast.git
