--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 [submodule "beast"]
 	path = beast
 	url = https://github.com/boostorg/beast.git
+[submodule "json"]
+	path = json
+	url = https://github.com/nlohmann/json.git
